fix: removed extra padding of navbar

--- a/frontend/src/app/shared/components/navbar/navbar.component.scss
+++ b/frontend/src/app/shared/components/navbar/navbar.component.scss
@@ -97,7 +97,6 @@ p-select-list-container {
   position: sticky;
   width: 100%;
   z-index: 1000;
-  padding-bottom: 1.7rem;
 }
 
 ::ng-deep .navbar-wrapper .p-select-overlay {
